--- a/app.json
+++ b/app.json
@@ -1,43 +1,50 @@
 {
   "expo": {
-    "name": "Muziek voor Kinderopvang",
+    "name": "Muziek Kids",
     "slug": "muziek-voor-kinderopvang",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-
+    "newArchEnabled": false,
     "ios": {
       "bundleIdentifier": "com.tuacompany.muziekvoorkinderopvang",
       "supportsTablet": true,
-      "buildNumber": "1.0.0"
+      "buildNumber": "2",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCameraUsageDescription": "Deze app gebruikt de camera niet actief, maar bevat modules die cameratoegang kunnen aanvragen.",
+        "NSPhotoLibraryUsageDescription": "Deze app gebruikt de fotobibliotheek niet actief, maar bevat modules die toegang kunnen aanvragen.",
+        "NSMicrophoneUsageDescription": "Deze app gebruikt de microfoon niet actief, maar bevat modules die toegang kunnen aanvragen."
+      }
     },
-
     "android": {
       "package": "com.tuacompany.muziekvoorkinderopvang",
-      "versionCode": 1,
+      "versionCode": 2,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
-
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       "expo-font",
       "expo-web-browser"
     ],
-
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "3a643faa-1f5b-4c03-8541-860a45dc7c5d"
+      }
     }
   }
 }
