--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.0.14",
     "expo": "^53.0.0",
+    "expo-audio": "~0.4.9",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
     "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.3",
+    "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.3",
     "expo-router": "~5.1.5",
@@ -37,9 +38,11 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-track-player": "^4.1.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
