--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.5",
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -33,6 +34,7 @@
     "expo-symbols": "~0.4.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "graphql": "^16.11.0",
     "lucide-react-native": "^0.475.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -45,7 +47,8 @@
     "react-native-track-player": "^4.1.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
