--- a/app.json
+++ b/app.json
@@ -1,32 +1,47 @@
 {
   "expo": {
     "name": "Muziek Kids",
-    "slug": "muziek-voor-kinderopvang",
-    "version": "1.0.7",
+    "slug": "muziek-voor-kinder",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": false,
+    "updates": {
+      "url": "https://u.expo.dev/7c738b7b-b225-421a-b487-74fc065bb113",
+      "enabled": true,
+      "fallbackToCacheTimeout": 3000,
+      "checkAutomatically": "ON_LOAD",
+      "requestHeaders": {
+        "expo-channel-name": "production"
+      }
+    },
     "ios": {
-      "bundleIdentifier": "com.tuacompany.muziekvoorkinderopvang",
+      "bundleIdentifier": "com.tuacompany.muziekvoorkinder",
       "supportsTablet": true,
-      "buildNumber": "7",
+      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSCameraUsageDescription": "Deze app gebruikt de camera niet actief, maar bevat modules die cameratoegang kunnen aanvragen.",
         "NSPhotoLibraryUsageDescription": "Deze app gebruikt de fotobibliotheek niet actief, maar bevat modules die toegang kunnen aanvragen.",
         "NSMicrophoneUsageDescription": "Deze app gebruikt de microfoon niet actief, maar bevat modules die toegang kunnen aanvragen.",
-        "UIBackgroundModes": ["audio"]
+        "UIBackgroundModes": [
+          "audio"
+        ]
       }
     },
     "android": {
-      "package": "com.tuacompany.muziekvoorkinderopvang",
-      "versionCode": 2,
+      "package": "com.tuacompany.muziekvoorkinder",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -45,8 +60,12 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "3a643faa-1f5b-4c03-8541-860a45dc7c5d"
+        "projectId": "7c738b7b-b225-421a-b487-74fc065bb113"
       }
+    },
+    "owner": "saschavan",
+    "runtimeVersion": {
+      "policy": "appVersion"
     }
   }
 }
