--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
