--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
       "package": "com.tuacompany.muziekvoorkinder",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "permissions": [
