--- a/app.json
+++ b/app.json
@@ -67,8 +67,6 @@
       }
     },
     "owner": "saschavan",
-    "runtimeVersion": {
-      "policy": "appVersion"
-    }
+    "runtimeVersion": "1.0.0"
   }
 }
